--- a/index.html
+++ b/index.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css' integrity='sha512-HHsOC+h3najWR7OKiGZtfhFIEzg5VRIPde0kB0bG2QRidTQqf+sbfcxCTB16AcFB93xMjnBIKE29/MjdzXE+qw==' crossorigin='anonymous'/>
+
     <link rel="stylesheet" href="css/style.css">
     <title>carousel-js</title>
 </head>
 <body>
     
+    <div class="main-wrapper">
+        <div class="container">
+            <div class="images">
+                <!-- <img class="item" src="img/argentina.jpg" alt=""> -->
+            </div>
+            <div class="thumbs">
+                <div class="btn left">
+                    <i class="fa-solid fa-chevron-left"></i>
+                </div>
+                <div class="btn right debug">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+                <!-- <img src="img/argentina.jpg" alt="" class="item active">
+                <img src="img/argentina.jpg" alt="" class="item">
+                <img src="img/argentina.jpg" alt="" class="item">
+                <img src="img/argentina.jpg" alt="" class="item">
+                <img src="img/argentina.jpg" alt="" class="item"> -->
+            </div>
+        </div>
+    </div>
+
+   
 
     <script src="js/script.js"></script>
 </body>
