--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
     <div class="main-wrapper">
         <div class="container">
             <div class="images">
-                <!-- <img class="item" src="img/argentina.jpg" alt=""> -->
+                <!-- <img class="item active" src="img/argentina.jpg" alt="">
+                <h2 class="title debug">
+                    Peru
+                </h2>
+                <p class="desc debug">
+                    parole in latino
+                </p> -->
             </div>
             <div class="thumbs">
                 <div class="btn left">
                     <i class="fa-solid fa-chevron-left"></i>
                 </div>
-                <div class="btn right debug">
+                <div class="btn right">
                     <i class="fa-solid fa-chevron-right"></i>
                 </div>
                 <!-- <img src="img/argentina.jpg" alt="" class="item active">
